[project]
name = "medirag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.6",
    "groq>=0.29.0",
    "huggingface-hub>=0.33.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "numpy>=2.3.1",
    "pypdf>=5.7.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]
